Project

General

Profile

Actions

Bug #18429

closed

Assertion failure if client is blacklisted with outstanding journaled IO

Added by Jason Dillaman over 7 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

For example, run "rbd bench-write" against an image with journaling enabled and blacklist the client. The rbd CLI will crash with an assertion failure in regards to not being able to flush its journal event (since it's blacklisted).

Actions #1

Updated by Jason Dillaman over 7 years ago

  • Status changed from In Progress to Fix Under Review

PR: included within https://github.com/ceph/ceph/pull/12639 (which will be backported to address the bug in previous releases)

Actions #2

Updated by Mykola Golub over 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF