src/librbd/exclusive_lock/ReleaseRequest.h
@@ -42,6 +42,9 @@ private:
    * BLOCK_WRITES
    *    |
    *    v
+   * INVALIDATE_CACHE
+   *    |
+   *    v
    * FLUSH_NOTIFIES . . . . . . . . . . . . . .
    *    |                                     .
    *    v                                     .
@@ -80,6 +83,9 @@ private:
 
   void send_block_writes();
   Context *handle_block_writes(int *ret_val);
+
+  void send_invalidate_cache(bool purge_on_error);
+  Context *handle_invalidate_cache(int *ret_val);
 
   void send_flush_notifies();
   Context *handle_flush_notifies(int *ret_val);
